<resources>
    <string name="app_name">S-Cool</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario_hint">Ingrese su usuario</string>
    <string name="password_hint">Ingrese su contraseña</string>
    <string name="error_conexion">Error en la conexión</string>
    <string name="login_exito">Login exitoso, Bienvenido</string>
    <string name="login_error">Error de usuario y/o contraseña</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_item">Home</string>
    <string name="materias_item">Materias</string>
    <string name="horario_item">Horario</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="nombre">Ingrese su nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="correo">Correo Electrónico</string>
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="registro_error">No se pudo completar el registro</string>

    <string name="departamento_prompt">Seleccione un departamento</string>
    <string-array name="departamento">
        <item>SIC</item>
        <item>TICS</item>
        <item>MECATRONICA</item>
        <item>ADMINISTRACION</item>
        <item>AMBIENTAL</item>
        <item>INFORMATICA</item>
    </string-array>

    <string name="tipo_usuario_prompt">Tipo de usuario</string>
    <string-array name="tipo_usuario">
        <item>estudiante</item>
        <item>docente</item>
    </string-array>


</resources>
